--- a/index.html
+++ b/index.html
@@ -7,18 +7,29 @@
 <style>
   a {color:blue;
      text-decoration:none;}
-  h1 { text-align: center;}
-  body {background-image: url('soccer wall paper.jpg');
+  h1 { text-align: center;
+       border-bottom:5px solid black;
+       border-top:5px solid black;
+       padding: 20px}
+  body {margin: 0;
+  background-image: url('soccer wall paper.jpg');
   background-size: cover;}
 </style>
 <body>
   <h1><a href="index.html">축구 풋살 매칭 </a></h1>
-  <ol>
-    <li><a href="match.html" target="_blank">매칭시작</a></li>
-    <li><a href="my team.html" target="_blank">내 팀관리</a></li>
-    <li><a href="friend.html" target="_blank">친구</a></li>
-    <li><a href="chat.html" target="_blank">채팅</a></li>
-    <li><a href="my profile.html" target="_blank">내 프로필</a></li>
-  </ol>
+  <div>
+   <div>
+     <span><a href="match.html" target="_blank">매칭시작</a></span>
+     <span><a href="my team.html" target="_blank">내 팀관리</a></span>
+   </div>
+   <div>
+    <span><a href="friend.html" target="_blank">친구</a></span>
+    <span><a href="chat.html" target="_blank">채팅</a></span>
+   </div>
+   <div>
+     <span><a href="my profile.html" target="_blank">내 프로필</a></span>
+     <span><a href="stadium reservation.html" target="_blank">경기장 예약</a></span>
+   </div>
+  </div>
 </body>
 </html>
