--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
   <h1><a href="index.html">축구 풋살 매칭 </a></h1>
   <div>
-   <div><span><a href="login.html" target="_blank">로그인하기</a></span></div>
+   <div><span><a href="first.html" target="_blank">로그인하기</a></span></div>
    <div>
      <span><a href="match.html" target="_blank">매칭시작</a></span>
      <span><a href="my team.html" target="_blank">내 팀관리</a></span>
