--- a/first.html
+++ b/first.html
@@ -22,7 +22,7 @@
         <div class="pass">Forgot Password?</div>
         <input type="submit" value="signInButton">
         <div class="signup_link">
-            Not a member? <a href="#">Sign up</a></div>
+            Not a member? <a href="signup.html">Sign up</a></div>
        </div>
      </form>
      <script type="module">
